tests/baselines/reference/moduleAugmentationImportsAndExports5.errors.txt
tests/cases/compiler/f3.ts(10,12): error TS4000: Import declaration 'I' is using private name 'N'.
tests/cases/compiler/f3.ts(11,12): error TS4000: Import declaration 'C' is using private name 'N'.


==== tests/cases/compiler/f1.ts (0 errors) ====
    export class A {}
    
==== tests/cases/compiler/f2.ts (0 errors) ====
    export class B {
        n: number;
    }
    
==== tests/cases/compiler/f3.ts (2 errors) ====
    import {A} from "./f1";
    import {B} from "./f2";
    
    A.prototype.foo = function () { return undefined; }
    
    namespace N {
        export interface Ifc { a: number; }
        export interface Cls { b: number; }
    }
    import I = N.Ifc;
               ~
!!! error TS4000: Import declaration 'I' is using private name 'N'.
    import C = N.Cls;
               ~
!!! error TS4000: Import declaration 'C' is using private name 'N'.
    
    declare module "./f1" {
        interface A {
            foo(): B;
            bar(): I;
            baz(): C;
        }
    }
    
==== tests/cases/compiler/f4.ts (0 errors) ====
    import {A} from "./f1";
    import "./f3";
    
    let a: A;
    let b = a.foo().n;
    let c = a.bar().a;
    let d = a.baz().b;